--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 				</a>
 			</div>
 			<div class="header__buttons">
-				<a href="" class="header__buttons-help white">Help</a>
-				<a href="" class="header__buttons-login white button-style">Login</a>
-				<a href="" class="header__buttons-signup white button-style">SignUp</a>
+				<a href="#" class="header__buttons-help white">Help</a>
+				<a href="#" class="header__buttons-login button-style white">Login</a>
+				<a href="#" class="header__buttons-signup button-style white">SignUp</a>
 			</div>
 		</div>
 	</header>
@@ -276,7 +276,6 @@
 			<p class="copyright">Freelancer © 2017</p>
 		</div>
 	</footer>
-	
 	
 	
 	<script type="text/javascript" src="js/vendor/jquery.min.js"></script>
