--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Freelancer</title>
+    <title>Website</title>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 <body>
@@ -227,7 +227,7 @@
 	</div>
 	
 	<div class="main container-width">
-		<h1 class="mainTitle">Freelancer.com is the world's largerst freelancing, 
+		<h1 class="mainTitle">website.com is the world's largerst freelancing, 
 		outsourcing and crowdsourcing marketplace.</h1>
 		<section class="sectionOne">
 			<div class="sectionOne__left">
@@ -273,7 +273,7 @@
 	
 	<footer class="footer" >
 		<div class="container-width">
-			<p class="copyright">Freelancer © 2017</p>
+			<p class="copyright">website © 2017</p>
 		</div>
 	</footer>
 	
